parsers/promqlextension_parser.go
// Code generated from PromQLExtensionParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // PromQLExtensionParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PromQLExtensionParser struct {
	*antlr.BaseParser
}

var PromQLExtensionParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func promqlextensionparserParserInit() {
	staticData := &PromQLExtensionParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'and'", "'or'",
		"'unless'", "'='", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'=~'",
		"'!~'", "'by'", "'without'", "'on'", "'ignoring'", "'group_left'", "'group_right'",
		"'offset'", "'bool'", "", "", "'{'", "'}'", "'('", "')'", "'['", "']'",
		"','", "'@'", "", "", "", "", "", "", "'if'", "'true'", "'false'", "'T'",
		"':'", "'.'",
	}
	staticData.SymbolicNames = []string{
		"", "NUMBER", "STRING", "ADD", "SUB", "MULT", "DIV", "MOD", "POW", "AND",
		"OR", "UNLESS", "EQ", "DEQ", "NE", "GT", "LT", "GE", "LE", "RE", "NRE",
		"BY", "WITHOUT", "ON", "IGNORING", "GROUP_LEFT", "GROUP_RIGHT", "OFFSET",
		"BOOL", "AGGREGATION_OPERATOR", "FUNCTION", "LEFT_BRACE", "RIGHT_BRACE",
		"LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", "COMMA",
		"AT", "DURATION", "METRIC_NAME", "LABEL_NAME", "WS", "SL_COMMENT", "EX_ID",
		"EX_IF", "EX_TRUE", "EX_FALSE", "EX_T", "EX_COLON", "EX_DOT", "EX_POSITIVE_INTEGER",
		"EX_TWO_DIGITS", "EX_DIGITS", "EX_NL",
	}
	staticData.RuleNames = []string{
		"promqlx", "ex_statement", "ex_alias_def", "ex_macro_def", "ex_block",
		"ex_arg_list", "ex_if_statement", "ex_condition", "ex_compareVectorOperation",
		"ex_trueConst", "ex_falseConst", "ex_time_instant_literal", "ex_iso_date_time",
		"ex_iso_date_time_ymdhmsf", "ex_iso_date_time_ymdhms", "ex_iso_date_time_ymdhm",
		"ex_iso_date_time_ymdh", "ex_iso_date_time_ymd", "ex_iso_date_time_ym",
		"ex_iso_date_time_y", "ex_year", "ex_month", "ex_day", "ex_hour", "ex_minutes",
		"ex_seconds", "ex_frac_sec", "ex_unix_timestamp", "ex_const_num_expression",
		"ex_num_literal", "ex_alias_call", "ex_duration", "ex_time_range", "ex_subquery_range",
		"vectorOperation", "unaryOp", "powOp", "multOp", "addOp", "compareOp",
		"andUnlessOp", "orOp", "vectorMatchOp", "subqueryOp", "offsetOp", "vector",
		"parens", "instantSelector", "labelMatcher", "labelMatcherOperator",
		"labelMatcherList", "matrixSelector", "offset", "function_", "parameter",
		"parameterList", "aggregation", "by", "without", "grouping", "on_",
		"ignoring", "groupLeft", "groupRight", "labelName", "labelNameList",
		"keyword", "literal",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PromQLExtensionParserInit initializes any static state used to implement PromQLExtensionParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPromQLExtensionParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PromQLExtensionParserInit() {
	staticData := &PromQLExtensionParserParserStaticData
	staticData.once.Do(promqlextensionparserParserInit)
}

// NewPromQLExtensionParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPromQLExtensionParser(input antlr.TokenStream) *PromQLExtensionParser {
	PromQLExtensionParserInit()
	this := new(PromQLExtensionParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PromQLExtensionParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PromQLExtensionParser.g4"

	return this
}

// PromQLExtensionParser tokens.
const (
	PromQLExtensionParserEOF                  = antlr.TokenEOF
	PromQLExtensionParserNUMBER               = 1
	PromQLExtensionParserSTRING               = 2
	PromQLExtensionParserADD                  = 3
	PromQLExtensionParserSUB                  = 4
	PromQLExtensionParserMULT                 = 5
	PromQLExtensionParserDIV                  = 6
	PromQLExtensionParserMOD                  = 7
	PromQLExtensionParserPOW                  = 8
	PromQLExtensionParserAND                  = 9
	PromQLExtensionParserOR                   = 10
	PromQLExtensionParserUNLESS               = 11
	PromQLExtensionParserEQ                   = 12
	PromQLExtensionParserDEQ                  = 13
	PromQLExtensionParserNE                   = 14
	PromQLExtensionParserGT                   = 15
	PromQLExtensionParserLT                   = 16
	PromQLExtensionParserGE                   = 17
	PromQLExtensionParserLE                   = 18
	PromQLExtensionParserRE                   = 19
	PromQLExtensionParserNRE                  = 20
	PromQLExtensionParserBY                   = 21
	PromQLExtensionParserWITHOUT              = 22
	PromQLExtensionParserON                   = 23
	PromQLExtensionParserIGNORING             = 24
	PromQLExtensionParserGROUP_LEFT           = 25
	PromQLExtensionParserGROUP_RIGHT          = 26
	PromQLExtensionParserOFFSET               = 27
	PromQLExtensionParserBOOL                 = 28
	PromQLExtensionParserAGGREGATION_OPERATOR = 29
	PromQLExtensionParserFUNCTION             = 30
	PromQLExtensionParserLEFT_BRACE           = 31
	PromQLExtensionParserRIGHT_BRACE          = 32
	PromQLExtensionParserLEFT_PAREN           = 33
	PromQLExtensionParserRIGHT_PAREN          = 34
	PromQLExtensionParserLEFT_BRACKET         = 35
	PromQLExtensionParserRIGHT_BRACKET        = 36
	PromQLExtensionParserCOMMA                = 37
	PromQLExtensionParserAT                   = 38
	PromQLExtensionParserDURATION             = 39
	PromQLExtensionParserMETRIC_NAME          = 40
	PromQLExtensionParserLABEL_NAME           = 41
	PromQLExtensionParserWS                   = 42
	PromQLExtensionParserSL_COMMENT           = 43
	PromQLExtensionParserEX_ID                = 44
	PromQLExtensionParserEX_IF                = 45
	PromQLExtensionParserEX_TRUE              = 46
	PromQLExtensionParserEX_FALSE             = 47
	PromQLExtensionParserEX_T                 = 48
	PromQLExtensionParserEX_COLON             = 49
	PromQLExtensionParserEX_DOT               = 50
	PromQLExtensionParserEX_POSITIVE_INTEGER  = 51
	PromQLExtensionParserEX_TWO_DIGITS        = 52
	PromQLExtensionParserEX_DIGITS            = 53
	PromQLExtensionParserEX_NL                = 54
)

// PromQLExtensionParser rules.
const (
	PromQLExtensionParserRULE_promqlx                   = 0
	PromQLExtensionParserRULE_ex_statement              = 1
	PromQLExtensionParserRULE_ex_alias_def              = 2
	PromQLExtensionParserRULE_ex_macro_def              = 3
	PromQLExtensionParserRULE_ex_block                  = 4
	PromQLExtensionParserRULE_ex_arg_list               = 5
	PromQLExtensionParserRULE_ex_if_statement           = 6
	PromQLExtensionParserRULE_ex_condition              = 7
	PromQLExtensionParserRULE_ex_compareVectorOperation = 8
	PromQLExtensionParserRULE_ex_trueConst              = 9
	PromQLExtensionParserRULE_ex_falseConst             = 10
	PromQLExtensionParserRULE_ex_time_instant_literal   = 11
	PromQLExtensionParserRULE_ex_iso_date_time          = 12
	PromQLExtensionParserRULE_ex_iso_date_time_ymdhmsf  = 13
	PromQLExtensionParserRULE_ex_iso_date_time_ymdhms   = 14
	PromQLExtensionParserRULE_ex_iso_date_time_ymdhm    = 15
	PromQLExtensionParserRULE_ex_iso_date_time_ymdh     = 16
	PromQLExtensionParserRULE_ex_iso_date_time_ymd      = 17
	PromQLExtensionParserRULE_ex_iso_date_time_ym       = 18
	PromQLExtensionParserRULE_ex_iso_date_time_y        = 19
	PromQLExtensionParserRULE_ex_year                   = 20
	PromQLExtensionParserRULE_ex_month                  = 21
	PromQLExtensionParserRULE_ex_day                    = 22
	PromQLExtensionParserRULE_ex_hour                   = 23
	PromQLExtensionParserRULE_ex_minutes                = 24
	PromQLExtensionParserRULE_ex_seconds                = 25
	PromQLExtensionParserRULE_ex_frac_sec               = 26
	PromQLExtensionParserRULE_ex_unix_timestamp         = 27
	PromQLExtensionParserRULE_ex_const_num_expression   = 28
	PromQLExtensionParserRULE_ex_num_literal            = 29
	PromQLExtensionParserRULE_ex_alias_call             = 30
	PromQLExtensionParserRULE_ex_duration               = 31
	PromQLExtensionParserRULE_ex_time_range             = 32
	PromQLExtensionParserRULE_ex_subquery_range         = 33
	PromQLExtensionParserRULE_vectorOperation           = 34
	PromQLExtensionParserRULE_unaryOp                   = 35
	PromQLExtensionParserRULE_powOp                     = 36
	PromQLExtensionParserRULE_multOp                    = 37
	PromQLExtensionParserRULE_addOp                     = 38
	PromQLExtensionParserRULE_compareOp                 = 39
	PromQLExtensionParserRULE_andUnlessOp               = 40
	PromQLExtensionParserRULE_orOp                      = 41
	PromQLExtensionParserRULE_vectorMatchOp             = 42
	PromQLExtensionParserRULE_subqueryOp                = 43
	PromQLExtensionParserRULE_offsetOp                  = 44
	PromQLExtensionParserRULE_vector                    = 45
	PromQLExtensionParserRULE_parens                    = 46
	PromQLExtensionParserRULE_instantSelector           = 47
	PromQLExtensionParserRULE_labelMatcher              = 48
	PromQLExtensionParserRULE_labelMatcherOperator      = 49
	PromQLExtensionParserRULE_labelMatcherList          = 50
	PromQLExtensionParserRULE_matrixSelector            = 51
	PromQLExtensionParserRULE_offset                    = 52
	PromQLExtensionParserRULE_function_                 = 53
	PromQLExtensionParserRULE_parameter                 = 54
	PromQLExtensionParserRULE_parameterList             = 55
	PromQLExtensionParserRULE_aggregation               = 56
	PromQLExtensionParserRULE_by                        = 57
	PromQLExtensionParserRULE_without                   = 58
	PromQLExtensionParserRULE_grouping                  = 59
	PromQLExtensionParserRULE_on_                       = 60
	PromQLExtensionParserRULE_ignoring                  = 61
	PromQLExtensionParserRULE_groupLeft                 = 62
	PromQLExtensionParserRULE_groupRight                = 63
	PromQLExtensionParserRULE_labelName                 = 64
	PromQLExtensionParserRULE_labelNameList             = 65
	PromQLExtensionParserRULE_keyword                   = 66
	PromQLExtensionParserRULE_literal                   = 67
)

// IPromqlxContext is an interface to support dynamic dispatch.
type IPromqlxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllEx_statement() []IEx_statementContext
	Ex_statement(i int) IEx_statementContext
	AllEX_NL() []antlr.TerminalNode
	EX_NL(i int) antlr.TerminalNode

	// IsPromqlxContext differentiates from other interfaces.
	IsPromqlxContext()
}

type PromqlxContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPromqlxContext() *PromqlxContext {
	var p = new(PromqlxContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromQLExtensionParserRULE_promqlx
	return p
}

func InitEmptyPromqlxContext(p *PromqlxContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromQLExtensionParserRULE_promqlx
}

func (*PromqlxContext) IsPromqlxContext() {}

func NewPromqlxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PromqlxContext {
	var p = new(PromqlxContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PromQLExtensionParserRULE_promqlx

	return p
}

func (s *PromqlxContext) GetParser() antlr.Parser { return s.parser }

func (s *PromqlxContext) AllEx_statement() []IEx_statementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEx_statementContext); ok {
			len++
		}
	}

	tst := make([]IEx_statementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEx_statementContext); ok {
			tst[i] = t.(IEx_statementContext)
			i++
		}
	}

	return tst
}

func (s *PromqlxContext) Ex_statement(i int) IEx_statementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEx_statementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEx_statementContext)
}

func (s *PromqlxContext) AllEX_NL() []antlr.TerminalNode {
	return s.GetTokens(PromQLExtensionParserEX_NL)
}

func (s *PromqlxContext) EX_NL(i int) antlr.TerminalNode {
	return s.GetToken(PromQLExtensionParserEX_NL, i)
}

func (s *PromqlxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PromqlxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PromqlxContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromQLExtensionParserListener); ok {
		listenerT.EnterPromqlx(s)
	}
}

func (s *PromqlxContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromQLExtensionParserListener); ok {
		listenerT.ExitPromqlx(s)
	}
}

func (p *PromQLExtensionParser) Promqlx() (localctx IPromqlxContext) {
	localctx = NewPromqlxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PromQLExtensionParserRULE_promqlx)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(139)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&2306237987291166) != 0) {
		{
			p.SetState(136)
			p.Ex_statement()
		}
		{
			p.SetState(137)
			p.Match(PromQLExtensionParserEX_NL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(141)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IEx_statementContext is an interface to support dynamic dispatch.
type IEx_statementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Ex_alias_def() IEx_alias_defContext
	Ex_macro_def() IEx_macro_defContext
	Ex_if_statement() IEx_if_statementContext
	VectorOperation() IVectorOperationContext

	// IsEx_statementContext differentiates from other interfaces.
	IsEx_statementContext()
}

type Ex_statementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEx_statementContext() *Ex_statementContext {
	var p = new(Ex_statementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromQLExtensionParserRULE_ex_statement
	return p
}

func InitEmptyEx_statementContext(p *Ex_statementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromQLExtensionParserRULE_ex_statement
}

func (*Ex_statementContext) IsEx_statementContext() {}

func NewEx_statementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Ex_statementContext {
	var p = new(Ex_statementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PromQLExtensionParserRULE_ex_statement

	return p
}

func (s *Ex_statementContext) GetParser() antlr.Parser { return s.parser }

func (s *Ex_statementContext) Ex_alias_def() IEx_alias_defContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEx_alias_defContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEx_alias_defContext)
}

func (s *Ex_statementContext) Ex_macro_def() IEx_macro_defContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEx_macro_defContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEx_macro_defContext)
}

func (s *Ex_statementContext) Ex_if_statement() IEx_if_statementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEx_if_statementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEx_if_statementContext)
}

func (s *Ex_statementContext) VectorOperation() IVectorOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVectorOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVectorOperationContext)
}

func (s *Ex_statementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Ex_statementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Ex_statementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromQLExtensionParserListener); ok {
		listenerT.EnterEx_statement(s)
	}
}

func (s *Ex_statementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromQLExtensionParserListener); ok {
		listenerT.ExitEx_statement(s)
	}
}

func (p *PromQLExtensionParser) Ex_statement() (localctx IEx_statementContext) {
	localctx = NewEx_statementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PromQLExtensionParserRULE_ex_statement)
	p.SetState(147)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(143)
			p.Ex_alias_def()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(144)
			p.Ex_macro_def()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(145)
			p.Ex_if_statement()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(146)
			p.vectorOperation(0)
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IEx_alias_defContext is an interface to support dynamic dispatch.
type IEx_alias_defContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EX_ID() antlr.TerminalNode
	EQ() antlr.TerminalNode
	VectorOperation() IVectorOperationContext

	// IsEx_alias_defContext differentiates from other interfaces.
	IsEx_alias_defContext()
}

type Ex_alias_defContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEx_alias_defContext() *Ex_alias_defContext {
	var p = new(Ex_alias_defContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromQLExtensionParserRULE_ex_alias_def
	return p
}

func InitEmptyEx_alias_defContext(p *Ex_alias_defContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromQLExtensionParserRULE_ex_alias_def
}

func (*Ex_alias_defContext) IsEx_alias_defContext() {}

func NewEx_alias_defContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Ex_alias_defContext {
	var p = new(Ex_alias_defContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PromQLExtensionParserRULE_ex_alias_def

	return p
}

func (s *Ex_alias_defContext) GetParser() antlr.Parser { return s.parser }

func (s *Ex_alias_defContext) EX_ID() antlr.TerminalNode {
	return s.GetToken(PromQLExtensionParserEX_ID, 0)
}

func (s *Ex_alias_defContext) EQ() antlr.TerminalNode {
	return s.GetToken(PromQLExtensionParserEQ, 0)
}

func (s *Ex_alias_defContext) VectorOperation() IVectorOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVectorOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}
